--- a/txt&boxsado.html
+++ b/txt&boxsado.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Web track</title>
 </head>
+
 <body>
-    <center><h1>THIS IS TEXT SHADOW</h1></center>
+    <center>
+        <h1>THIS IS TEXT SHADOW</h1>
+    </center>
     <h1 id="SHADOW">hellow world </h1>
     <div id="box"> </div>
+    <center>
+        <h1>margin</h1>
+    </center>
+    <p>this is text margin </p>
+    <!-- i will give here a box for more clear vison  -->
+     <div class="hellow">hellow1</div> <br>
+     <div class="hellow">hellow2</div>
 </body>
+
 </html>
