this is again trying this

--- a/txt&boxsado.html
+++ b/txt&boxsado.html
@@ -19,9 +19,12 @@
     </center>
     <p>this is text margin </p>
     <!-- i will give here a box for more clear vison  -->
-     <div class="hellow">hellow1</div> <br>
-     <div class="helloi">hellow2</div>
-     <div class="hard">this is top</div>
+    <div class="hellow">hellow1</div> <br>
+    <div class="helloi">hellow2</div><br>
+    <p>this is a prototype</p>
+    <div id="one" class="hard">bottom</div>
+    <div id="two" class="hard">top</div>
+    
 </body>
 
 </html>
