i got a problem 2 div is hard to control

--- a/txt&boxsado.html
+++ b/txt&boxsado.html
@@ -22,8 +22,8 @@
     <div class="hellow">hellow1</div> <br>
     <div class="helloi">hellow2</div><br>
     <p>this is a prototype</p>
-    <div id="one" class="hard">bottom</div>
-    <div id="two" class="hard">top</div>
+    <div id="himadry"><div id="one" class="hard">bottom</div>
+    <div id="two" class="hard">top</div></div>
     
 </body>
 
