div problem still not solved

--- a/txt&boxsado.html
+++ b/txt&boxsado.html
@@ -22,9 +22,12 @@
     <div class="hellow">hellow1</div> <br>
     <div class="helloi">hellow2</div><br>
     <p>this is a prototype</p>
-    <div id="himadry"><div id="one" class="hard">bottom</div>
-    <div id="two" class="hard">top</div></div>
-    
+   <div class="walid">
+        <div id="one" class="hard">bottom</div>
+        <div id="two" class="hard">top</div>
+    </div>
+<p>not we r working with 3 div</p>
+
 </body>
 
 </html>
