this is my organized step for html and css

--- a/txt&boxsado.html
+++ b/txt&boxsado.html
@@ -22,11 +22,15 @@
     <div class="hellow">hellow1</div> <br>
     <div class="helloi">hellow2</div><br>
     <p>this is a prototype</p>
-   <div class="walid">
+    <div class="walid">
         <div id="one" class="hard">bottom</div>
         <div id="two" class="hard">top</div>
     </div>
-<p>not we r working with 3 div</p>
+    <p>not we r working with 3 div</p>
+
+    <div id="box1"></div>
+    <br><br>
+    <h1>float element</h1>
 
 </body>
 
