--- a/code learning webside/cssproperty.html
+++ b/code learning webside/cssproperty.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
     <link rel="stylesheet" href="newscc.css">
-    <link rel="icon" type="image/x-icon" href="cssimg.png" hight:auto>
+    <link rel="icon" type="image/x-icon" href="cssimg.png">
 </head>
+
 <body>
-    
+    <div id="Float">
+        <h1>Float propertyes: </h1>
+    </div>
+    <div id="float"> <img id="imagef" src="sanda.jpg" alt="this a picture of sanda">heloow world this ia a pictur</div>
 </body>
+
 </html>
