after 2 hr of solid work i fixed that

--- a/code learning webside/cssproperty.html
+++ b/code learning webside/cssproperty.html
@@ -13,22 +13,29 @@
     <div id="Float">
         <h1>Float propertyes: </h1>
     </div>
-    <p id="float"> <img id="imagef" src="sanda.jpg" alt="this a picture of sanda">A woman with a deep love for
-    traditional art and nature sits quietly under the warm afternoon sun, preparing her tools for a unique form of
-    expression — mehendi. But today, instead of the usual floral patterns or decorative motifs, she chooses to honor a
-    creature from the wild: the Shanda, a striking member of the golf reptile family. This rare lizard, known for its
-    tough scales and desert survival skills, has long fascinated her. With practiced hands and an eye for detail, she
-    begins to bring the Shanda to life on her skin using only natural henna paste. She outlines its sturdy tail curling
-    like a wave, the rugged armor of its body, and its alert, watchful eyes. Every line and curve in the design reflects
-    the lizard’s strength, adaptability, and mystery.
+    <div id="containar1">
+    <img id="imagef" src="sanda.jpg" alt="this a picture of sanda">A woman with a deep love for
+        traditional art and nature sits quietly under the warm afternoon sun, preparing her tools for a unique form of
+        expression — mehendi. But today, instead of the usual floral patterns or decorative motifs, she chooses to honor
+        a
+        creature from the wild: the Shanda, a striking member of the golf reptile family. This rare lizard, known for
+        its
+        tough scales and desert survival skills, has long fascinated her. With practiced hands and an eye for detail,
+        she
+        begins to bring the Shanda to life on her skin using only natural henna paste. She outlines its sturdy tail
+        curling
+        like a wave, the rugged armor of its body, and its alert, watchful eyes. Every line and curve in the design
+        reflects
+        the lizard’s strength, adaptability, and mystery.
 
-    The mehendi not only becomes a visual tribute to the Shanda, but a symbolic connection between the woman and the
-    raw, untamed essence of nature. As the henna dries, it stains her skin in rich brown hues, turning her hand into a
-    canvas of wild beauty and cultural storytelling. For her, this isn’t just body art — it’s a celebration of life
-    forms often overlooked, a way to blend ancient tradition with the wild spirit of the natural world. The image of the
-    Shanda on her hand stands as a bold artistic statement: that beauty can be found not just in roses and vines, but
-    also in the tough skin of a reptile thriving under a desert sky.
-    </p>
+        The mehendi not only becomes a visual tribute to the Shanda, but a symbolic connection between the woman and the
+        raw, untamed essence of nature. As the henna dries, it stains her skin in rich brown hues, turning her hand into
+        a
+        canvas of wild beauty and cultural storytelling. For her, this isn’t just body art — it’s a celebration of life
+        forms often overlooked, a way to blend ancient tradition with the wild spirit of the natural world. The image of
+        the
+    </div>
+ 
 </body>
 
 </html>
