this is work of art

--- a/code learning webside/cssproperty.html
+++ b/code learning webside/cssproperty.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
     <link rel="stylesheet" href="newscc.css">
-    <link rel="icon" type="image/x-icon" href="cssimg.png">
+    <link rel="icon" type="image/x-icon" href="picture/cssimg.png">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <h1>Float propertyes: </h1>
     </div>
     <div id="containar1">
-    <img id="imagef" src="sanda.jpg" alt="this a picture of sanda">A woman with a deep love for
+    <img id="imagef" src="picture/sanda.jpg" alt="this a picture of sanda">A woman with a deep love for
         traditional art and nature sits quietly under the warm afternoon sun, preparing her tools for a unique form of
         expression — mehendi. But today, instead of the usual floral patterns or decorative motifs, she chooses to honor
         a
