a little box work

--- a/code learning webside/cssproperty.html
+++ b/code learning webside/cssproperty.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <script src="jasc.js"></script>
     <div id="Float">
         <h1>Float propertyes: </h1>
     </div>
@@ -24,18 +25,13 @@
         she
         begins to bring the Shanda to life on her skin using only natural henna paste. She outlines its sturdy tail
         curling
-        like a wave, the rugged armor of its body, and its alert, watchful eyes. Every line and curve in the design
-        reflects
-        the lizard’s strength, adaptability, and mystery.
-
-        The mehendi not only becomes a visual tribute to the Shanda, but a symbolic connection between the woman and the
-        raw, untamed essence of nature. As the henna dries, it stains her skin in rich brown hues, turning her hand into
-        a
-        canvas of wild beauty and cultural storytelling. For her, this isn’t just body art — it’s a celebration of life
-        forms often overlooked, a way to blend ancient tradition with the wild spirit of the natural world. The image of
-        the
+        
+       
     </div>
- 
+ <div>
+    <div id="box1"></div>
+    <div id="box2"></div>
+ </div>
 </body>
 
 </html>
